--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -247,7 +247,7 @@ jobs:
           yarn workspace @noir-lang/backend_barretenberg test
 
   test-noir-js:
-    needs: [build-acvm-js, build-noirc-abi]
+    needs: [build-nargo, build-acvm-js, build-noirc-abi]
     name: Noir JS
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -255,6 +255,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Download nargo binary
+        uses: actions/download-artifact@v3
+        with:
+          name: nargo
+          path: ./nargo
       
       - name: Download artifact
         uses: actions/download-artifact@v3
@@ -268,6 +274,14 @@ jobs:
           name: noirc_abi_wasm
           path: ./tooling/noirc_abi_wasm
       
+      - name: Set nargo on PATH
+        run: |
+          nargo_binary="${{ github.workspace }}/nargo/nargo"
+          chmod +x $nargo_binary
+          echo "$(dirname $nargo_binary)" >> $GITHUB_PATH
+          export PATH="$PATH:$(dirname $nargo_binary)"
+          nargo -V
+
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
 
