--- a/deny.toml
+++ b/deny.toml
@@ -93,6 +93,11 @@ unknown-registry = "warn"
 # Lint level for what to happen when a crate from a git repository that is not
 # in the allow list is encountered
 unknown-git = "deny"
+
+# DON'T YOU DARE ADD ANYTHING TO THIS IF YOU WANT TO PUBLISH ANYTHING NOIR RELATED TO CRATES.IO
+#
+# crates.io rejects git dependencies so anything depending on these is unpublishable and you'll ruin my day
+# when I find out.
 allow-git = [
     "https://github.com/noir-lang/grumpkin",
     "https://github.com/jfecher/chumsky"
