--- a/yarn-project/noir-contracts/Nargo.toml
+++ b/yarn-project/noir-contracts/Nargo.toml
@@ -4,6 +4,7 @@ members = [
     "contracts/benchmarking_contract",
     "contracts/card_game_contract",
     "contracts/child_contract",
+    "contracts/contract_class_registerer_contract",
     "contracts/counter_contract",
     "contracts/docs_example_contract",
     "contracts/easy_private_token_contract",
