--- a/deny.toml
+++ b/deny.toml
@@ -57,7 +57,7 @@ allow = [
     # bitmaps 2.1.0, generational-arena 0.2.9,im 15.1.0
     "MPL-2.0",
     # Boost Software License
-    "BSL-1.0"
+    "BSL-1.0",
 ]
 
 # Allow 1 or more licenses on a per-crate basis, so that particular licenses
@@ -93,7 +93,4 @@ unknown-registry = "warn"
 # Lint level for what to happen when a crate from a git repository that is not
 # in the allow list is encountered
 unknown-git = "deny"
-allow-git = [
-    "https://github.com/noir-lang/grumpkin",
-    "https://github.com/jfecher/chumsky"
-]
+allow-git = ["https://github.com/jfecher/chumsky"]
