added back generational_arena, added copy of generational_arena::{Arena, Index} to {Arena, Index}, added tests for parity between arenas to class, added missing instances, found inconsistency, wip debugging

--- a/compiler/utils/arena/Cargo.toml
+++ b/compiler/utils/arena/Cargo.toml
@@ -4,3 +4,6 @@ version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+
+[dependencies]
+generational-arena = "0.2.8"
