--- a/compiler/noirc_frontend/Cargo.toml
+++ b/compiler/noirc_frontend/Cargo.toml
@@ -23,6 +23,7 @@ rustc-hash = "1.1.0"
 small-ord-set = "0.1.3"
 regex = "1.9.1"
 tracing.workspace = true
+generational-arena = "0.2.8"
 
 [dev-dependencies]
 strum = "0.24"
