Add Impact and Workaround sections

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -38,6 +38,37 @@ body:
         2.
         3.
         4.
+  - type: dropdown
+    id: impact
+    attributes:
+      label: Project Impact
+      description: Does this affect a project you or others are working on? 
+      options:
+        - "No"
+        - "Nice-to-have"
+        - "Blocker"
+    validations:
+      required: true
+  - type: textarea
+    id: impact_context
+    attributes:
+      label: Impact Context
+      description: If a nice-to-have / blocker, supplement how does this Issue affect the project.
+  - type: dropdown
+    id: workaround
+    attributes:
+      label: Workaround
+      description: Is there a workaround for this Issue? 
+      options:
+        - "No"
+        - "Yes"
+    validations:
+      required: true
+  - type: textarea
+    id: workaround_description
+    attributes:
+      label: Workaround Description
+      description: If yes, supplement how could the Issue be worked around.
   - type: markdown
     attributes:
       value: |
