Update Environment section with NoirJS section

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -73,32 +73,35 @@ body:
     attributes:
       value: |
         # Environment
-        Specify your versions of Noir releases used.
+        Specify your version of Noir tooling used.
   - type: markdown
     attributes:
       value: |
-        ## Using Nargo?
+        ## Nargo (CLI)
   - type: dropdown
     id: nargo-install
     attributes:
       label: Installation Method
       description: How did you install Nargo?
-      multiple: false
       options:
-        - Binary
+        - Binary (`noirup` default)
         - Compiled from source
   - type: input
     id: nargo-version
     attributes:
       label: Nargo Version
-      description: What is the output of the `nargo --version` command?
-      placeholder: "nargo 0.6.0 (git version hash: 0181813203a9e3e46c6d8c3169ad5d25971d4282, is dirty: false)"
+      description: Output of running `nargo --version`
+      placeholder: "nargo version = 0.23.0 noirc version = 0.23.0+5be9f9d7e2f39ca228df10e5a530474af0331704 (git version hash: 5be9f9d7e2f39ca228df10e5a530474af0331704, is dirty: false)"
   - type: markdown
     attributes:
       value: |
-        ## Using TypeScript?
-        Please await for our new set of packages.
-        You can find our target release timeframe on the [Noir Roadmap](https://github.com/orgs/noir-lang/projects/1/views/16).
+        ## NoirJS (JavaScript)
+  - type: input
+    id: noirjs-version
+    attributes:
+      label: NoirJS Version
+      description: Version number of `noir_js` in `package.json`
+      placeholder: "0.23.0"
   - type: markdown
     attributes:
       value: |
