chore: Unhardcode canonical addresses of deployer and registerer contracts (#4467)
Creates a new package `protocol-contracts` to store the artifacts and
canonical deployment addresses for well-known protocol contracts.
Contains deployer and registerer for now, should include address
registry and encryption precompiles in the future as well.

Builds on #4436.

--- a/yarn-project/protocol-contracts/tsconfig.json
+++ b/yarn-project/protocol-contracts/tsconfig.json
@@ -7,29 +7,14 @@
   },
   "references": [
     {
-      "path": "../circuit-types"
-    },
-    {
       "path": "../circuits.js"
-    },
-    {
-      "path": "../ethereum"
     },
     {
       "path": "../foundation"
     },
     {
-      "path": "../kv-store"
-    },
-    {
-      "path": "../l1-artifacts"
-    },
-    {
-      "path": "../protocol-contracts"
-    },
-    {
       "path": "../types"
     }
   ],
-  "include": ["src"]
+  "include": ["src", "src/**/*.json"]
 }
