feat: Aztec.js API for registering a contract class (#4469)
Adds a new registerContractClass method in aztecjs public API, that
takes a wallet and an artifact, and returns the tx request ready to
send.
    
To make sure this tx can be run, we now also register canonical
contracts in the pxe on startup, so they are always available.

Built on #4467

--- a/yarn-project/pxe/package.json
+++ b/yarn-project/pxe/package.json
@@ -41,6 +41,7 @@
     "@aztec/kv-store": "workspace:^",
     "@aztec/noir-compiler": "workspace:^",
     "@aztec/noir-protocol-circuits": "workspace:^",
+    "@aztec/protocol-contracts": "workspace:^",
     "@aztec/simulator": "workspace:^",
     "@aztec/types": "workspace:^",
     "koa": "^2.14.2",
