--- a/yarn-project/aztec.js/package.json
+++ b/yarn-project/aztec.js/package.json
@@ -9,6 +9,7 @@
     "./abi": "./dest/api/abi.js",
     "./account": "./dest/api/account.js",
     "./aztec_address": "./dest/api/aztec_address.js",
+    "./deployment": "./dest/api/deployment.js",
     "./eth_address": "./dest/api/eth_address.js",
     "./ethereum": "./dest/api/ethereum.js",
     "./fields": "./dest/api/fields.js",
@@ -51,6 +52,7 @@
     "@aztec/circuits.js": "workspace:^",
     "@aztec/ethereum": "workspace:^",
     "@aztec/foundation": "workspace:^",
+    "@aztec/protocol-contracts": "workspace:^",
     "@aztec/types": "workspace:^",
     "tslib": "^2.4.0"
   },
