--- a/yarn-project/simulator/package.json
+++ b/yarn-project/simulator/package.json
@@ -45,10 +45,12 @@
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.0",
     "@types/levelup": "^5.1.3",
+    "@types/lodash.merge": "^4.6.9",
     "@types/memdown": "^3.0.2",
     "@types/node": "^18.7.23",
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
+    "lodash.merge": "^4.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
