--- a/.github/workflows/test-rust-workspace.yml
+++ b/.github/workflows/test-rust-workspace.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         include:
           - os: ubuntu
-            runner: ubuntu-latest
+            runner: ubuntu-large
             target: x86_64-unknown-linux-gnu
 
     steps:
