chore: fix workflow file

--- a/.github/workflows/test-rust-workspace.yml
+++ b/.github/workflows/test-rust-workspace.yml
@@ -76,4 +76,4 @@ jobs:
       - name: Run tests
         run: |
           ~/.cargo/bin/cargo-nextest nextest run --workspace --archive-file nextest-archive.tar.zst \
-            -E "${{ matrix.test-filter }"
+            -E "${{ matrix.test-filter }}"
