--- a/.github/workflows/test-rust-workspace.yml
+++ b/.github/workflows/test-rust-workspace.yml
@@ -73,5 +73,5 @@ jobs:
           name: nextest-archive
       - name: Run tests
         run: |
-          ~/.cargo/bin/cargo-nextest nextest run --archive-file nextest-archive.tar.zst \
+          cargo nextest run --archive-file nextest-archive.tar.zst \
             -E "${{ matrix.test-filter }}"
