--- a/.github/workflows/test-rust-workspace.yml
+++ b/.github/workflows/test-rust-workspace.yml
@@ -54,6 +54,7 @@ jobs:
     strategy:
       matrix:
         test-filter: ["package(noir_debugger)",  "not package(noir_debugger)"]
+        partition: [1, 2]
     steps:
       - uses: actions/checkout@v4
       
@@ -74,4 +75,5 @@ jobs:
       - name: Run tests
         run: |
           cargo nextest run --archive-file nextest-archive.tar.zst \
-            -E "${{ matrix.test-filter }}"
+            -E "${{ matrix.test-filter }}" \
+            --partition count:${{ matrix.partition }}/2
