--- a/.github/workflows/test-rust-workspace.yml
+++ b/.github/workflows/test-rust-workspace.yml
@@ -48,7 +48,7 @@ jobs:
           path: nextest-archive.tar.zst
 
   test:
-    name: Run tests
+    name: "Run tests (partition ${{matrix.partition}})"
     runs-on: ubuntu-latest
     needs: [build-test-artifacts]
     strategy:
