--- a/.github/workflows/publish-es-packages.yml
+++ b/.github/workflows/publish-es-packages.yml
@@ -18,28 +18,26 @@ jobs:
   build-noirc_abi_wasm:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
+      - name: Setup toolchain
+        uses: dtolnay/rust-toolchain@1.71.1
+
+      - uses: Swatinem/rust-cache@v2
         with:
-          ref: ${{ inputs.noir-ref }}
+          key: noirc-abi
+          save-if: false
 
-      - name: Setup Nix
-        uses: ./.github/actions/nix
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          nix-cache-name: "noir"
-          cachix-auth-token: ${{ secrets.CACHIXAUTHTOKEN }}
+      - name: Install Yarn dependencies
+        uses: ./.github/actions/setup
 
-      - name: Build wasm package
-        run: |
-          nix build -L .#noirc_abi_wasm
+      - name: Build noirc_abi
+        run: yarn workspace @noir-lang/noirc_abi build
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
           name: noirc_abi_wasm
-          path: |
-            result/noirc_abi_wasm/nodejs
-            result/noirc_abi_wasm/web
+          path: ./tooling/noirc_abi_wasm/outputs/out/noirc_abi_wasm
+          retention-days: 10
 
   build-noir_wasm:
     needs: [build-noirc_abi_wasm]
@@ -84,26 +82,27 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.noir-ref }}
 
-      - name: Setup Nix
-        uses: ./.github/actions/nix
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          nix-cache-name: "noir"
-          cachix-auth-token: ${{ secrets.CACHIXAUTHTOKEN }}
+      - name: Setup toolchain
+        uses: dtolnay/rust-toolchain@1.71.1
 
-      - name: Build wasm package
-        run: |
-          nix build -L .#acvm_js
-
-      - uses: actions/upload-artifact@v4
+      - uses: Swatinem/rust-cache@v2
         with:
-          name: acvm_js
-          path: |
-            result/acvm_js/nodejs
-            result/acvm_js/web
+          key: acvm-js
+          save-if: false
+
+      - name: Install Yarn dependencies
+        uses: ./.github/actions/setup
+
+      - name: Build acvm_js
+        run: yarn workspace @noir-lang/acvm_js build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: acvm-js
+          path: ./tooling/noirc_abi_wasm/outputs/out/acvm_js
+          retention-days: 3
           
   publish-es-packages:
     runs-on: ubuntu-latest
