--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -51,6 +51,9 @@ jobs:
     timeout-minutes: 30
 
     steps:
+      - name: Checkout Noir repo
+        uses: actions/checkout@v4
+
       - name: Setup toolchain
         uses: dtolnay/rust-toolchain@1.71.1
 
