chore: remove `noir_wasm` dependency on `noirc_abi_wasm` (#4315)
# Description

## Problem\*

Resolves <!-- Link to GitHub Issue -->

## Summary\*

`noir_wasm`s dependency on `noirc_abi_wasm` is preventing us from
building it in parallel. It only relies on types so I've moved those to
`noir_js_types` and both of those packages pull these types in.

## Additional Context



## Documentation\*

Check one:
- [x] No documentation needed.
- [ ] Documentation included in this PR.
- [ ] **[Exceptional Case]** Documentation to be submitted in a separate
PR.

# PR Checklist\*

- [x] I have tested the changes locally.
- [x] I have formatted the changes with [Prettier](https://prettier.io/)
and/or `cargo fmt` on default settings.

--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -47,7 +47,6 @@ jobs:
           retention-days: 3
 
   build-noir-wasm:
-    needs: [build-noirc-abi]
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
@@ -64,14 +63,11 @@ jobs:
           cache-on-failure: true
           save-if: ${{ github.event_name != 'merge_group' }}
 
-      - name: Download noirc_abi_wasm package artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: noirc_abi_wasm
-          path: ./tooling/noirc_abi_wasm
-
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
+
+      - name: Build noir_js_types
+        run: yarn workspace @noir-lang/types build
 
       - name: Build noir_wasm
         run: yarn workspace @noir-lang/noir_wasm build
