chore: add eslint dev dependency to noir_wasm

--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -47,6 +47,7 @@
     "@noir-lang/noirc_abi": "workspace:*",
     "@types/adm-zip": "^0.5.0",
     "@types/chai": "^4",
+    "@types/eslint": "^8",
     "@types/mocha": "^10.0.6",
     "@types/mocha-each": "^2",
     "@types/node": "^20.10.5",
@@ -63,6 +64,7 @@
     "browserify-fs": "^1.0.0",
     "chai": "^4.3.10",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.56.0",
     "html-webpack-plugin": "^5.5.4",
     "memfs": "^4.6.0",
     "mocha": "^10.2.0",
