chore: always run all rust tests

--- a/.github/workflows/test-rust-workspace.yml
+++ b/.github/workflows/test-rust-workspace.yml
@@ -52,6 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-test-artifacts]
     strategy:
+      fail-fast: false
       matrix:
         partition: [1, 2, 3, 4]
     steps:
