feat: static call support in aztec.nr and acir-simulator (#4106)
Closes https://github.com/AztecProtocol/aztec-packages/issues/4036,
https://github.com/AztecProtocol/aztec-packages/issues/2872

Added support for static calls, making sure callcontext is properly
forwarded and checked in the simulator before reaching the kernel
circuits.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -687,6 +687,17 @@ jobs:
           name: "Test"
           command: cond_spot_run_compose end-to-end 4 ./scripts/docker-compose.yml TEST=e2e_nested_contract.test.ts
 
+  e2e-static-calls:
+    docker:
+      - image: aztecprotocol/alpine-build-image
+    resource_class: small
+    steps:
+      - *checkout
+      - *setup_env
+      - run:
+          name: "Test"
+          command: cond_spot_run_compose end-to-end 4 ./scripts/docker-compose.yml TEST=e2e_static_calls.test.ts
+
   e2e-non-contract-account:
     docker:
       - image: aztecprotocol/alpine-build-image
@@ -1308,6 +1319,7 @@ workflows:
       - e2e-state-vars: *e2e_test
       - e2e-block-building: *e2e_test
       - e2e-nested-contract: *e2e_test
+      - e2e-static-calls: *e2e_test
       - e2e-non-contract-account: *e2e_test
       - e2e-multiple-accounts-1-enc-key: *e2e_test
       - e2e-cli: *e2e_test
@@ -1349,6 +1361,7 @@ workflows:
             - e2e-state-vars
             - e2e-block-building
             - e2e-nested-contract
+            - e2e-static-calls
             - e2e-non-contract-account
             - e2e-multiple-accounts-1-enc-key
             - e2e-cli
