Add Dev Rel tagging

--- a/.github/workflows/docs-pr.yml
+++ b/.github/workflows/docs-pr.yml
@@ -114,3 +114,15 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
+
+  add_comment:
+    needs: [deploy_preview]
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Tag Dev Rel
+      - uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          message: |
+            FYI @noir-lang/developerrelations on Noir doc changes.
