chore(docs): getting a bot to comment on docs PRs with docs previews (#4600)
This PR makes it substantially easy to review and see changes in PRs
containing docs changes by deploying a preview and commenting on the PR
with a link to that preview.

There are a few changes worth mentioning:
- The deploy/non-deploy logic is moved from the CircleCI config to the
downstream script `deploy_netlify`
- This script will always deploy in prod when PRs are merged, so no
change in logic here.
- But now, the script gets that PR's file changes via the Github API and
checks if there are changes in docs. If there are, then the deploy runs
without the `--prod` flag, which will deploy a preview only
- It then parses the output searching for the Unique URL which is passed
to the bot comment logic
- The bot comment logic is changed so it can be reused, by basically
adding an enum for the different comment markdowns and importing them
dynamically

This way, the deploy only runs in PRs that have changes in docs,
commenting on those PRs with a deploy preview. When merged, changes are
deployed in prod.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1118,17 +1118,12 @@ jobs:
             fi
       - run:
           name: "Build docs"
-          command: build docs
-          aztec_manifest_key: docs
-      - run:
-          name: "Deploy docs"
           command: |
-            if [ "$CIRCLE_BRANCH" == "master" ]; then
-              echo "Deploying docs (on master)."
-              docs/deploy_netlify.sh
-            else
-              echo "Skipping doc deploy (not on master)."
-            fi
+            echo "Building docs"
+            build docs
+
+            echo "Deploying docs"
+            docs/deploy_netlify.sh $CIRCLE_BRANCH $CIRCLE_PULL_REQUEST
 
   yellow-paper:
     machine:
